--- a/1.10.html
+++ b/1.10.html
@@ -5,11 +5,11 @@
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
 
-    var a = 1;
-    var b = 2;
-    var c = 4;
-    var u = a + b - c;
-    document.write(u)
+    var x = 1.7;
+    var r = Math.pow((x+1),2) + 3*(x+1);
+    var x = 3;
+    var w = Math.pow((x+1),2) + 3*(x+1);
+    document.write( r.toFixed(2),",",w);
 
 </script>
 </body>
