--- a/1.9.html
+++ b/1.9.html
@@ -5,11 +5,9 @@
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
 
-    var a = 1;
-    var b = 2;
-    var c = 4;
-    var u = a + b - c;
-    document.write(u)
+    var x = -2;
+    var r = Math.abs(x)+x^5;
+    document.write(r);
 
 </script>
 </body>
