--- a/1.11.html
+++ b/1.11.html
@@ -5,11 +5,9 @@
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
 
-    var a = 1;
-    var b = 2;
-    var c = 4;
-    var u = a + b - c;
-    document.write(u)
+    var x = -2.34;
+    var r =  (Math.abs(x-5)-Math.sin(x))/3+(Math.sqrt(Math.pow(x,2)+2014))*(Math.cos(2*x))-3;
+    document.write(r.toFixed(5));
 
 </script>
 </body>
