--- a/1.7.html
+++ b/1.7.html
@@ -5,11 +5,10 @@
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
 
-    var a = 1;
-    var b = 2;
-    var c = 4;
-    var u = a + b - c;
-    document.write(u)
+    var a = 1/2;
+    var b = 1/4;
+    var r = a + b;
+    document.write(r)
 
 </script>
 </body>
