--- a/1.8.html
+++ b/1.8.html
@@ -5,11 +5,10 @@
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
 
-    var a = 1;
-    var b = 2;
-    var c = 4;
-    var u = a + b - c;
-    document.write(u)
+    var a = 2;
+    var b = 3;
+    var r = (a + 4*b)*(a-3*b)+a^2;
+    document.write(r)
 
 </script>
 </body>
