--- a/1.10.html
+++ b/1.10.html
@@ -4,13 +4,15 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
-
     var x = 1.7;
     var r = Math.pow((x+1),2) + 3*(x+1);
     var x = 3;
     var w = Math.pow((x+1),2) + 3*(x+1);
     document.write( r.toFixed(2),",",w);
-
 </script>
 </body>
 </html>
+/**
+* Вычислите значение выражения (x+1)^2+3(x+1) при а) x=1.7; б) x=3.
+* Ответ: а) 15.39 б) 28
+*/
