--- a/1.11.html
+++ b/1.11.html
@@ -4,11 +4,13 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
-
     var x = -2.34;
     var r =  (Math.abs(x-5)-Math.sin(x))/3+(Math.sqrt(Math.pow(x,2)+2014))*(Math.cos(2*x))-3;
     document.write(r.toFixed(5));
-
 </script>
 </body>
 </html>
+/**
+* Вычислите значение выражения( |x−5|−sinx)/3+√(x2+2014)*cos2x−3 при x=−2.34.
+* Ответ: -1.76911
+*/
