--- a/1.3.html
+++ b/1.3.html
@@ -4,7 +4,6 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#edfaff;">'+character+'</span>');
     };
-
     for (var i = 1; i <= 5; i++) {
         for (var e = 0; e < i; e++) {
             pringCharacterToPage('0');
@@ -14,3 +13,7 @@
 </script>
 </body>
 </html>
+/**
+* Вывести на экран пять строк из нулей,
+*причем количество нулей в каждой строке равно номеру строки.
+*/
