--- a/1.4.html
+++ b/1.4.html
@@ -14,3 +14,7 @@
 </script>
 </body>
 </html>
+/**
+* Вывести на экран прямоугольник, заполненный буквами А.
+* Количество строк в прямоугольнике равно 5, количество столбцов равно 8.
+*/
