--- a/1.7.html
+++ b/1.7.html
@@ -4,12 +4,13 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
-
     var a = 1/2;
     var b = 1/4;
     var r = a + b;
-    document.write(r)
-
+    document.write(r);
 </script>
 </body>
 </html>
+/**
+* Вычислите 1/2+1/4. Ответ: 0.75
+*/
