--- a/1.8.html
+++ b/1.8.html
@@ -4,12 +4,13 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
-
     var a = 2;
     var b = 3;
     var r = (a + 4*b)*(a-3*b)+a^2;
-    document.write(r)
-
+    document.write(r);
 </script>
 </body>
 </html>
+/**
+* Вычислите значение выражения (a+4b)(a−3b)+a^2 при a=2 и b=3. Ответ:  -94
+*/
