--- a/1.9.html
+++ b/1.9.html
@@ -4,11 +4,12 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
-
     var x = -2;
     var r = Math.abs(x)+x^5;
     document.write(r);
-
 </script>
 </body>
 </html>
+/**
+* Вычислите |x|+x5, если x=−2.
+*/
