--- a/1.2.html
+++ b/1.2.html
@@ -6,3 +6,7 @@
 </script>
 </body>
 </html>
+/**
+* Вывести на экран текущее название дня недели, название месяца и свое имя.
+* Каждое слово должно быть в отдельной строке.
+*/
