--- a/1.6.html
+++ b/1.6.html
@@ -4,15 +4,15 @@
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
-
     var a = 1;
     var b = 2;
     var c = 4;
     var u = a + b - c;
-    document.write(u)
-
+    document.write(u);
 </script>
 </body>
 </html>
 
-
+/**
+* Вывести на экран результат вычисления 1+2−4.
+*/
