--- a/1.4.html
+++ b/1.4.html
@@ -1,6 +1,10 @@
 <html>
 <body>
 <script type="text/javascript">
+    /**
+     * Вывести на экран прямоугольник, заполненный буквами А.
+     * Количество строк в прямоугольнике равно 5, количество столбцов равно 8..
+     */
     var pringCharacterToPage = function (character) {
         document.write('<span style="color:#ffafa3;">'+character+'</span>');
     };
@@ -14,7 +18,4 @@
 </script>
 </body>
 </html>
-/**
-* Вывести на экран прямоугольник, заполненный буквами А.
-* Количество строк в прямоугольнике равно 5, количество столбцов равно 8.
-*/
+
