--- a/1.10.html
+++ b/1.10.html
@@ -12,7 +12,7 @@
     var r = Math.pow((x+1),2) + 3*(x+1);
     var x = 3;
     var w = Math.pow((x+1),2) + 3*(x+1);
-    document.write( r.toFixed(2),",",w);
+    document.write( r.toFixed(2)+ '</br>'+w);
 </script>
 </body>
 </html>
