--- a/1.12.html
+++ b/1.12.html
@@ -9,7 +9,7 @@
     };
     var x = 3.6;
     var r = Math.pow(Math.E,x-2)+(Math.abs(Math.sin(x))-(Math.pow(x,10))*Math.cos(1/x));
-    document.write(r);
+    document.write(r.toFixed(2));
 </script>
 </body>
 </html>
