--- a/1.2.html
+++ b/1.2.html
@@ -7,13 +7,17 @@
      */
     var date = new Date();
     var options = {
-        day: 'numeric',
-        weekday: 'long',
-        month: 'long'
+        weekday: "long",
     };
-    var text = ('Ala');
-    alert( date.toLocaleString('ru', options)+'\n'+text );
 
+    var m_names = ['January', 'February', 'March',
+        'April', 'May', 'June', 'July',
+        'August', 'September', 'October', 'November', 'December'];
+    d = new Date();
+    var n = m_names[d.getMonth()];
+
+    var text = ('Ala');
+    alert (date.toLocaleDateString('ru', options)+'\n'+m_names[d.getMonth()]+'\n'+text)
 </script>
 </body>
 </html>
