--- a/1.43.html
+++ b/1.43.html
@@ -1,3 +1,4 @@
+<!--suppress ALL -->
 <html>
 <body>
 <script type="text/javascript">
@@ -7,10 +8,10 @@
      *
      */
     var month = 6;
-    if (month >=3,month <=5) {alert ('Весна');}
-    if (month >=6, month <=8) {alert ('Лето');}
-    if (month >=9, month <=11) {alert ('Осень');}
-    if (month =12, month =1, month = 2) {alert ('Зима');}
+    if (month >=3 && month <=5) {alert ('Весна');}
+    else if (month >=6 && month <=8) {alert ('Лето');}
+    else if (month >=9 && month <=11) {alert ('Осень');}
+    else if (month =12 && month =1 && month = 2) {alert ('Зима');}
 </script>
 </body>
 </html>
