--- a/1.35.html
+++ b/1.35.html
@@ -6,13 +6,10 @@
      *  Если оно меньше 7, то вывести Yes, если больше 10, то вывести No,
      *  если равно 9, то вывести Error.
      */
-    var pringCharacterToPage = function (character) {
-        document.write('<span style="color:#ffafa3;">'+character+'</span>');
-    };
-    var x = 8;
+    var x = 11;
     if (x<7){ alert ('Yes');}
     else if (x>10){alert ('No');}
-    else if (x=9){alert ('Error');}
+    else if (x===9){alert ('Error');}
 </script>
 </body>
 </html>
