--- a/1.37.html
+++ b/1.37.html
@@ -4,13 +4,10 @@
     /**
      *  Дано два числа. Вывести наибольшее из них.
      */
-    var pringCharacterToPage = function (character) {
-        document.write('<span style="color:#ffafa3;">'+character+'</span>');
-    };
     var a = 66;
     var v = 11;
     if (a>v){alert (a);}
-    else if (a<v){alert (v);}
+    else{alert (v);}
 </script>
 </body>
 </html>
