--- a/1.39.html
+++ b/1.39.html
@@ -5,13 +5,10 @@
      *  Даны два числа. Если первое число больше второго, то вывести yes,
      *  иначе поменять значения этих переменных и вывести их на экран.
      */
-    var pringCharacterToPage = function (character) {
-        document.write('<span style="color:#ffafa3;">'+character+'</span>');
-    };
     var a = 9;
     var v = 22;
     if (a>v){alert ('yes');}
-    else if (a<v){alert ([v,a]);}
+    else {alert ('a=22,v=9');}
 </script>
 </body>
 </html>
