--- a/1.38.html
+++ b/1.38.html
@@ -4,13 +4,13 @@
     /**
      *  Дано два числа. Вывести yes, если они отличаются на 100, иначе вывести No.
      */
-    var pringCharacterToPage = function (character) {
-        document.write('<span style="color:#ffafa3;">'+character+'</span>');
-    };
     var a = 666;
     var v = 11;
-    if (a+v>100){alert ('yes');}
-    else if (a-v<100){alert ('no');}
+    if (a-v>100){
+        alert ('yes');
+    }if (a+v<100){
+        alert ('no');
+    }
 </script>
 </body>
 </html>
