--- a/1.43.html
+++ b/1.43.html
@@ -1,4 +1,3 @@
-<!--suppress ALL -->
 <html>
 <body>
 <script type="text/javascript">
@@ -7,11 +6,11 @@
      *  Вывести название поры года (весна, лето и т.д.)
      *
      */
-    var month = 6;
-    if (month >=3 && month <=5) {alert ('Весна');}
-    else if (month >=6 && month <=8) {alert ('Лето');}
-    else if (month >=9 && month <=11) {alert ('Осень');}
-    else if (month =12 && month =1 && month = 2) {alert ('Зима');}
+    var m = 6;
+    if (m >=3 && m <=5) {alert ('Весна');}
+    else if (m >=6 && m <=8) {alert ('Лето');}
+    else if (m >=9 && m <=11) {alert ('Осень');}
+    else if (m ===12 && m ===1 && m ===2) {alert ('Зима');}
 </script>
 </body>
 </html>
