--- a/1.38.html
+++ b/1.38.html
@@ -8,7 +8,7 @@
     var v = 11;
     if (a-v>100){
         alert ('yes');
-    }if (a+v<100){
+    }else if (a+v<100){
         alert ('no');
     }
 </script>
