--- a/1.57.html
+++ b/1.57.html
@@ -7,8 +7,8 @@
      *  (например, 12 02 1999 - yes, 22 13 2001 - no).
      *  Считать, что в феврале всегда 28 дней.
      */
-    var date =new Date(2017,10,5);
-    if ((date.getFullYear() === 2017) && (date.getMonth() = 10) && (date.getDate() === 5)){alert("yes");}
+    var date =new Date(2017,15,5);
+    if ((date.getFullYear() === 2017) && (date.getMonth() === 15) && (date.getDate() === 5)){alert("yes");}
     else {alert("no");}
 </script>
 </body>
