--- a/1.60.html
+++ b/1.60.html
@@ -6,7 +6,7 @@
      *  Переставьте первую и последнюю цифры.
      */
     var a = 654;
-    if (n1=(n % 10) + (n / 10 % 10) + (n / 10 /10 % 10)){alert (n1);}
+    if (n1===(n % 10) + (n / 10 % 10) + (n / 10 /10 % 10)){alert (n1);}
 </script>
 </body>
 </html>
