--- a/1.60.html
+++ b/1.60.html
@@ -5,8 +5,11 @@
      *  Дано трехзначное число.
      *  Переставьте первую и последнюю цифры.
      */
-    var a = 654;
-    if (n1===(n % 10) + (n / 10 % 10) + (n / 10 /10 % 10)){alert (n1);}
+    var n = 654;
+    var n1 = n / 10 / 10 % 10;
+    var n2 = n / 10 % 10;
+    var n3 = n  % 10;
+    if (nn === n1*100 + n2*10 + n3){alert (nn);}
 </script>
 </body>
 </html>
