--- a/1.59.html
+++ b/1.59.html
@@ -5,11 +5,11 @@
      *  Дано четырехзначное число. Верно ли, что цифр в нем расположены по убыванию?
      *  Например, 4311 - нет, 4321 - да, 5542 - нет, 5631 - нет, 9871 - да.
      */
-    var a = 6543;
-    var a1 = 6;
-    var a2 = 5;
-    var a3 = 4;
-    var a4 = 3;
+    var a = 3843;
+    var a4 = a % 10;
+    var a3 = a  / 10 % 10;
+    var a2 = a / 10 / 10 % 10;
+    var a1 = a / 10 / 10 / 10 % 10;
     if (a1>a2 && a2>a3 && a3>a4){alert ("yes");}
     else {alert("no");}
 </script>
