--- a/1.63.html
+++ b/1.63.html
@@ -7,9 +7,9 @@
      *  образованное из двух данных чисел путем
      *  дописывания второго числа к первому справа.
      */
-    var n = '111';
-    var t = 222;
-    alert(n+t);
+    var a = 999;
+    var b = 222;
+    alert(a.toString()+b);
 </script>
 </body>
 </html>
