--- a/1.57.html
+++ b/1.57.html
@@ -7,8 +7,9 @@
      *  (например, 12 02 1999 - yes, 22 13 2001 - no).
      *  Считать, что в феврале всегда 28 дней.
      */
-    var date =new Date(2017,11,5);
-    if ((date.getFullYear() === 2017) && (date.getMonth() === 11) && (date.getDate() === 5)){alert("yes");}
+    var date =new Date(2018,18,5);
+    if ((date.getFullYear() === 2018) && (date.getMonth() === 18) && (date.getDate() === 5)){alert("yes");}
+    else {alert("no");}
 </script>
 </body>
 </html>
